# hdt-cpp

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Doxyfile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  configure  configure.ac  gnulib.sh  maccompile.sh  prueba.config
hdt-it/: .cproject  (+71 more)
hdt-lib/: .cproject  .project  Doxyfile  Makefile  Makefile.am  Makefile.in  README
hdt-lib/data/: compacthuff.hdtcfg  config.properties  hdtspec.properties  plainlog.hdtcfg  test.n3  test.nt
hdt-lib/examples/: .gitignore  Test1.cpp  Test2.cpp  Test3.cpp  Test4.cpp  Test5.cpp  Test5b.cpp  Tutorial01  Tutorial01.cpp  Tutorial02  Tutorial02.cpp  Tutorial02b.cpp  Tutorial03  Tutorial03.cpp  Tutorial03b.cpp  Tutorial04  Tutorial04.cpp  Tutorial04b.cpp  Tutorial05  Tutorial05.cpp  Tutorial06.cpp  generate.cpp  hdtSeachMultipleHDTs.cpp  search.cpp  statistics.cpp
hdt-lib/include/: ControlInformation.hpp  Dictionary.hpp  HDT.hpp  HDTEnums.hpp  HDTFactory.hpp  HDTListener.hpp  HDTManager.hpp  HDTSpecification.hpp  HDTVersion.hpp  HDTVocabulary.hpp  Header.hpp  Iterator.hpp  RDF.hpp  RDFParser.hpp  RDFSerializer.hpp  SingleTriple.hpp  Triples.hpp
hdt-lib/presets/: bitmaphuff.hdtcfg  bitmaplog.hdtcfg  bitmapwavelet.hdtcfg  caseinsensitive.hdtcfg  compacthuff.hdtcfg  compactlog.hdtcfg  fmindex.hdtcfg  plain.hdtcfg  plainlog.hdtcfg  tripleslist.hdtcfg
hdt-lib/qmake/: .gitignore  hdt-lib.pro
hdt-lib/qmake/tools/: tools.pri  tools.pro
hdt-lib/src/: BasicHDT.cpp  BasicHDT.hpp  ControlInformation.cpp  HDTFactory.cpp  HDTSpecification.cpp  PlainDictionary.cpp  PlainDictionary.hpp  PlainTriples.cpp  PlainTriples.hpp  RDFParser.cpp  RDFParser.hpp  RDFParserN3.cpp  RDFParserN3.hpp  RDFSerializer.hpp  RDFSerializerN3.cpp  RDFSerializerN3.hpp  SpacelessParser.hpp  propertyutil.h
hdt-lib/src/bitsequence/: BitSeq.h  BitSequence375.cpp  BitSequence375.h
hdt-lib/src/dictionary/: FourSectionDictionary.cpp  FourSectionDictionary.hpp  KyotoDictionary.cpp  KyotoDictionary.hpp  LiteralDictionary.cpp  LiteralDictionary.hpp  PFCDictionary.cpp  PFCDictionary.hpp  PlainDictionary.cpp  PlainDictionary.hpp
hdt-lib/src/hdt/: BasicHDT.cpp  BasicHDT.hpp  BasicModifiableHDT.cpp  BasicModifiableHDT.hpp  ControlInformation.cpp  HDTFactory.cpp  HDTFactory.hpp  HDTManager.cpp  HDTSpecification.cpp  MultipleHDT.cpp  MultipleHDT.hpp  TripleIDStringIterator.cpp  TripleIDStringIterator.hpp
hdt-lib/src/header/: BasicHeader.cpp  BasicHeader.hpp  EmptyHeader.hpp  PlainHeader.cpp  PlainHeader.hpp
hdt-lib/src/huffman/: Huffman.cpp  Huffman.h  huff.cpp  huff.h
hdt-lib/src/libdcs/: CSD.cpp  CSD.h  CSD_Cache.cpp  CSD_Cache.h  CSD_Cache2.cpp  CSD_Cache2.h  CSD_FMIndex.cpp  CSD_FMIndex.h  CSD_HTFC.cpp  CSD_HTFC.h  CSD_PFC.cpp  CSD_PFC.h  VByte.cpp  VByte.h
hdt-lib/src/lm_access/: gzstream.cpp  gzstream.hpp
hdt-lib/src/rdf/: RDFParser.cpp  RDFParser.hpp  RDFParserN3.cpp  RDFParserN3.hpp  RDFParserNtriples.cpp  RDFParserNtriples.hpp  RDFParserNtriplesCallback.cpp  RDFParserNtriplesCallback.hpp  RDFParserRaptor.cpp  RDFParserRaptor.hpp  RDFParserRaptorCallback.cpp  RDFParserRaptorCallback.hpp  RDFParserRaptorLine.cpp  RDFParserRaptorLine.hpp  RDFParserSerd.cpp  RDFParserSerd.hpp  RDFSerializer.cpp  RDFSerializer.hpp  RDFSerializerN3.cpp  RDFSerializerN3.hpp  RDFSerializerNTriples.cpp  RDFSerializerRaptor.cpp  (+3 more)
hdt-lib/test/: cmp.cpp  iter.cpp  rap.cpp
hdt-lib/tests/: Makefile.am  Makefile.in  bit375.cpp  bitutiltest.cpp  cmp.cpp  confm.cpp  conops.cpp  conpfc.cpp  convert.cpp  conwav.cpp  csd.cpp  dic.cpp  filterSearch.cpp  fmindex.cpp  genCache.cpp  genIndex.cpp  getSuggestions.cpp  getobj.cpp  goog.cpp  goto.cpp  hdt2rdfNotMapping.cpp  hdtExtract.cpp  iter.cpp  joinsearch.cpp  jointest.cpp  kyoto.cpp  mergeHdt.cpp  mincor.cpp  naiveComplete.cpp  opendic.cpp  parse.cpp  patsearch.cpp  popcnt.cpp  randomSolution.cpp  rap.cpp  rdfprint.cpp  streamtest.cpp  useHeaderStats.cpp  wav.cpp
hdt-lib/third/: gzstream.cpp  gzstream.h
hdt-lib/tools/: .gitignore  Makefile.am  Makefile.in  dataset.h  hdt2rdf.cpp  hdtExtract.cpp  hdtInfo.cpp  hdtSearch.cpp  modifyHeader.cpp  rdf2hdt.cpp  replaceHeader.cpp  searchHeader.cpp
libcds/: Makefile.am  Makefile.in  cds.pc.in
libcds/include/: BitSequenceBuilder.h  BitSequenceDArray.h  BitSequenceRG.h  BitSequenceRRR.h  BitSequenceSDArray.h  BitString.h  HuffmanCoder.h  LCP.h  LCP_DAC.h  LCP_DAC_VAR.h  LCP_PhiSpare.h  LCP_Sad.h  LCP_naive.h  Mapper.h  MapperCont.h  MapperNone.h  NPR.h  PermutationMRRR.h  PermutationWT.h  RMQ_succinct.h  RMQ_succinct_lcp.h  Sequence.h  SequenceAlphPart.h  SequenceGMR.h  SequenceGMRChunk.h  SuffixTree.h  SuffixTreeY.h  TextIndexCSA.h  WaveletMatrix.h  WaveletTreeNoptrs.h  WaveletTreeNoptrsS.h  huff.h  libcdsTrees.h  perm.h  wt_coder_binary.h
libcds/lib/: .gitignore
libcds/qmake/: libcds.pro
libcds/tests/: Makefile.am  Makefile.in  testLCP.cpp  testNPR.cpp
libhdt/: .cproject  .gitignore  Makefile.am  README  README.md  hdt.pc.in
libhdt/data/: example1.conf  test.nt
libhdt/examples/: statistics.cpp
libhdt/include/: ControlInformation.hpp  Dictionary.hpp  HDTEnums.hpp  HDTListener.hpp  HDTManager.hpp  HDTSpecification.hpp  HDTVersion.hpp  HDTVocabulary.hpp  Iterator.hpp  RDFParser.hpp  RDFSerializer.hpp  SingleTriple.hpp
libhdt/presets/: bitmaphuff.hdtcfg  bitmapwavelet.hdtcfg  compacthuff.hdtcfg  dictionaryfour.hdtcfg  dictionaryliteral.hdtcfg  ops.hdtcfg  plain.hdtcfg  plainlog.hdtcfg  wrong_dictionaryfour.hdtcfg
libhdt/tests/: .gitignore  Makefile.am  README.md  bit375.cpp  c11.cpp  confm.cpp  conpfc.cpp  conwav.cpp  dic.cpp  dictionaries.cpp  dumpDictionary.cpp  filterSearch.cpp  genIndex.cpp  getSuggestions.cpp  hdt2rdfNotMapping.cpp  joinsearch.cpp  kyoto.cpp  listener.cpp  logarr.cpp  mergeHDT.cpp  mincor.cpp  naiveComplete.cpp  parse.cpp  patsearch.cpp  popcnt.cpp  properties.cpp  rdfprint.cpp  serd.cpp  streamtest.cpp  testmax.cpp  userHeaderStats.cpp  wav.cpp
libhdt/tools/: .gitignore  Makefile.am  hdt2rdf.cpp  hdtInfo.cpp  hdtSearch.cpp  modifyHeader.cpp  rdf2hdt.cpp  replaceHeader.cpp  searchHeader.cpp
(+696 files in other folders)
