lib_LTLIBRARIES = libcds.la
libcds_la_SOURCES = \
static/bitsequence/BitSequenceBuilderDArray.cpp\
static/bitsequence/BitSequenceBuilderRG.cpp\
static/bitsequence/BitSequenceBuilderRRR.cpp\
static/bitsequence/BitSequenceBuilderSDArray.cpp\
static/bitsequence/BitSequence.cpp\
static/bitsequence/BitSequenceDArray.cpp\
static/bitsequence/BitSequenceRG.cpp\
static/bitsequence/BitSequenceRRR.cpp\
static/bitsequence/BitSequenceSDArray.cpp\
static/bitsequence/sdarraySadakane.cpp\
static/bitsequence/TableOffsetRRR.cpp\
static/coders/huff.cpp\
static/coders/HuffmanCoder.cpp\
static/mapper/MapperCont.cpp\
static/mapper/Mapper.cpp\
static/mapper/MapperNone.cpp\
static/mapper/MapperRev.cpp\
static/permutation/perm.cpp\
static/permutation/PermutationBuilderMRRR.cpp\
static/permutation/PermutationBuilderWT.cpp\
static/permutation/Permutation.cpp\
static/permutation/PermutationMRRR.cpp\
static/permutation/PermutationWT.cpp\
static/sequence/BitmapsSequence.cpp\
static/sequence/SequenceAlphPart.cpp\
static/sequence/SequenceBuilderAlphPart.cpp\
static/sequence/SequenceBuilderGMRChunk.cpp\
static/sequence/SequenceBuilderGMR.cpp\
static/sequence/SequenceBuilderStr.cpp\
static/sequence/SequenceBuilderWaveletMatrix.cpp\
static/sequence/SequenceBuilderWaveletTree.cpp\
static/sequence/SequenceBuilderWaveletTreeNoptrs.cpp\
static/sequence/SequenceBuilderWaveletTreeNoptrsS.cpp\
static/sequence/Sequence.cpp\
static/sequence/SequenceGMRChunk.cpp\
static/sequence/SequenceGMR.cpp\
static/sequence/WaveletMatrix.cpp\
static/sequence/WaveletTree.cpp\
static/sequence/WaveletTreeNoptrs.cpp\
static/sequence/WaveletTreeNoptrsS.cpp\
static/sequence/wt_coder_binary.cpp\
static/sequence/wt_coder.cpp\
static/sequence/wt_coder_huff.cpp\
static/sequence/wt_node.cpp\
static/sequence/wt_node_internal.cpp\
static/sequence/wt_node_leaf.cpp\
static/suffixtree/factorization.cpp\
static/suffixtree/factorization_var.cpp\
static/suffixtree/LCP.cpp\
static/suffixtree/LCP_DAC.cpp\
static/suffixtree/LCP_DAC_VAR.cpp\
static/suffixtree/LCP_FMN.cpp\
static/suffixtree/LCP_naive.cpp\
static/suffixtree/LCP_PhiSpare.cpp\
static/suffixtree/LCP_PT.cpp\
static/suffixtree/LCP_Sad.cpp\
static/suffixtree/NPR_CN.cpp\
static/suffixtree/NPR.cpp\
static/suffixtree/NPR_FMN.cpp\
static/suffixtree/NSV.cpp\
static/suffixtree/PSV.cpp\
static/suffixtree/RMQ_succinct.cpp\
static/suffixtree/RMQ_succinct_lcp.cpp\
static/suffixtree/SuffixTree.cpp\
static/suffixtree/SuffixTreeY.cpp\
static/textindex/comparray4.cpp\
static/textindex/mmap.cpp\
static/textindex/qsufsort.cpp\
static/textindex/suftest3.test.cpp\
static/textindex/TextIndex.cpp\
static/textindex/TextIndexCSA.cpp
