check_PROGRAMS = \
testArray \
testBitSequence \
testHuffman \
testLCP \
testNPR \
testQuantile \
testSequence \
testSuffixTree \
testTextIndex \
timeSequence \
toArray2 \
toArray

AM_DEFAULT_SOURCE_EXT = .cpp
AM_CPPFLAGS = -I@top_srcdir@/libcds/include $(WARN_CFLAGS)
LDADD = ../libcds.la

TESTS = $(check_PROGRAMS)
